@@ -132,9 +132,10 @@ They are transformed from section titles after parsing. -->
 <li><a class="reference internal" href="#complex-tables" id="id68">2.21&nbsp;&nbsp;&nbsp;Complex tables</a></li>
 <li><a class="reference internal" href="#list-tables" id="id69">2.22&nbsp;&nbsp;&nbsp;List Tables</a></li>
 <li><a class="reference internal" href="#custom-roles" id="id70">2.23&nbsp;&nbsp;&nbsp;Custom Roles</a></li>
+<li><a class="reference internal" href="#svg-images" id="id71">2.24&nbsp;&nbsp;&nbsp;SVG Images</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#error-handling" id="id71">3&nbsp;&nbsp;&nbsp;Error Handling</a></li>
+<li><a class="reference internal" href="#error-handling" id="id72">3&nbsp;&nbsp;&nbsp;Error Handling</a></li>
 </ul>
 </div>
 <div class="section" id="structural-elements">
@@ -478,7 +479,7 @@ Here's a reference to the next footnote: <a class="footnote-reference" href="#id
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
 <tr><td class="label">[4]</td><td>Here's an unreferenced footnote, with a reference to a
-nonexistent footnote: <a href="#id80"><span class="problematic" id="id81"><span id="id17"></span>[5]_</span></a>.</td></tr>
+nonexistent footnote: <a href="#id81"><span class="problematic" id="id82"><span id="id17"></span>[5]_</span></a>.</td></tr>
 </tbody>
 </table>
 </div>
@@ -491,7 +492,7 @@ nonexistent footnote: <a href="#id80"><span class="problematic" id="id81"><span 
 rendered separately and differently from footnotes.</td></tr>
 </tbody>
 </table>
-<p>Here's a reference to the above, <a class="citation-reference" href="#cit2002" id="id18">[CIT2002]</a>, and a <a href="#id82"><span class="problematic" id="id83"><span id="id19"></span>[nonexistent]_</span></a>
+<p>Here's a reference to the above, <a class="citation-reference" href="#cit2002" id="id18">[CIT2002]</a>, and a <a href="#id83"><span class="problematic" id="id84"><span id="id19"></span>[nonexistent]_</span></a>
 citation.</p>
 </div>
 <div class="section" id="targets">
@@ -505,7 +506,7 @@ hyperlink targets</a> are also possible.</p>
 &quot;<a class="reference external" href="http://www.python.org/">Python</a> <a class="footnote-reference" href="#id25" id="id27">[5]</a>&quot;.</p>
 <p>Targets may be indirect and anonymous.  Thus <a class="reference internal" href="#targets">this phrase</a> may also
 refer to the <a class="reference internal" href="#targets">Targets</a> section.</p>
-<p>Here's a <a href="#id84"><span class="problematic" id="id85">`hyperlink reference without a target`_</span></a>, which generates an
+<p>Here's a <a href="#id85"><span class="problematic" id="id86">`hyperlink reference without a target`_</span></a>, which generates an
 error.</p>
 <div class="section" id="duplicate-target-names">
 <h3><a class="toc-backref" href="#id51">2.13.1&nbsp;&nbsp;&nbsp;Duplicate Target Names</a></h3>
@@ -517,34 +518,34 @@ explicit targets will generate &quot;warning&quot; (level-2) system messages.</p
 <h3><a class="toc-backref" href="#id52">2.13.2&nbsp;&nbsp;&nbsp;Duplicate Target Names</a></h3>
 <p>Since there are two &quot;Duplicate Target Names&quot; section headers, we
 cannot uniquely refer to either of them by name.  If we try to (like
-this: <a href="#id86"><span class="problematic" id="id87">`Duplicate Target Names`_</span></a>), an error is generated.</p>
+this: <a href="#id87"><span class="problematic" id="id88">`Duplicate Target Names`_</span></a>), an error is generated.</p>
 </div>
 </div>
 <div class="section" id="directives">
 <h2><a class="toc-backref" href="#id53">2.14&nbsp;&nbsp;&nbsp;Directives</a></h2>
 <div class="contents local topic" id="contents">
 <ul class="auto-toc simple">
-<li><a class="reference internal" href="#document-parts" id="id72">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></li>
-<li><a class="reference internal" href="#images-and-figures" id="id73">2.14.2&nbsp;&nbsp;&nbsp;Images and Figures</a></li>
-<li><a class="reference internal" href="#admonitions" id="id74">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></li>
-<li><a class="reference internal" href="#topics-sidebars-and-rubrics" id="id75">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></li>
-<li><a class="reference internal" href="#target-footnotes" id="id76">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></li>
-<li><a class="reference internal" href="#replacement-text" id="id77">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></li>
-<li><a class="reference internal" href="#compound-paragraph" id="id78">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></li>
-<li><a class="reference internal" href="#parsed-literal-blocks" id="id79">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></li>
+<li><a class="reference internal" href="#document-parts" id="id73">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></li>
+<li><a class="reference internal" href="#images-and-figures" id="id74">2.14.2&nbsp;&nbsp;&nbsp;Images and Figures</a></li>
+<li><a class="reference internal" href="#admonitions" id="id75">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></li>
+<li><a class="reference internal" href="#topics-sidebars-and-rubrics" id="id76">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></li>
+<li><a class="reference internal" href="#target-footnotes" id="id77">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></li>
+<li><a class="reference internal" href="#replacement-text" id="id78">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></li>
+<li><a class="reference internal" href="#compound-paragraph" id="id79">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></li>
+<li><a class="reference internal" href="#parsed-literal-blocks" id="id80">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></li>
 </ul>
 </div>
 <p>These are just a sample of the many reStructuredText Directives.  For
 others, please see
 <a class="reference external" href="http://docutils.sourceforge.net/docs/ref/rst/directives.html">http://docutils.sourceforge.net/docs/ref/rst/directives.html</a>.</p>
 <div class="section" id="document-parts">
-<h3><a class="toc-backref" href="#id72">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></h3>
+<h3><a class="toc-backref" href="#id73">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></h3>
 <p>An example of the &quot;contents&quot; directive can be seen above this section
 (a local, untitled table of <a class="reference internal" href="#contents">contents</a>) and at the beginning of the
 document (a document-wide <a class="reference internal" href="#table-of-contents">table of contents</a>).</p>
 </div>
 <div class="section" id="images-and-figures">
-<h3><a class="toc-backref" href="#id73">2.14.2&nbsp;&nbsp;&nbsp;Images and Figures</a></h3>
+<h3><a class="toc-backref" href="#id74">2.14.2&nbsp;&nbsp;&nbsp;Images and Figures</a></h3>
 <p>An image directive (also clickable -- a hyperlink reference):</p>
 <a class="reference internal image-reference" href="#directives"><img alt="../../../docs/user/rst/images/title.png" class="class1 class2" src="../../../docs/user/rst/images/title.png" /></a>
 <p>Image with multiple IDs:</p>
@@ -633,7 +634,7 @@ upon the style sheet and the browser or rendering software used.</p>
 upon the style sheet and the browser or rendering software used.</p>
 </div>
 <div class="section" id="admonitions">
-<h3><a class="toc-backref" href="#id74">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></h3>
+<h3><a class="toc-backref" href="#id75">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></h3>
 <div class="attention">
 <p class="first admonition-title">Attention!</p>
 <p class="last">Directives at large.</p>
@@ -682,7 +683,7 @@ Reader discretion is strongly advised.</p>
 </div>
 </div>
 <div class="section" id="topics-sidebars-and-rubrics">
-<h3><a class="toc-backref" href="#id75">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></h3>
+<h3><a class="toc-backref" href="#id76">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></h3>
 <p><em>Sidebars</em> are like miniature, parallel documents.</p>
 <div class="sidebar">
 <p class="first sidebar-title">Sidebar Title</p>
@@ -706,7 +707,7 @@ document's structure. It is typically highlighted in red (hence the name).</p>
 allowed (e.g. inside a directive).</p>
 </div>
 <div class="section" id="target-footnotes">
-<h3><a class="toc-backref" href="#id76">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></h3>
+<h3><a class="toc-backref" href="#id77">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></h3>
 <table class="docutils footnote" frame="void" id="id25" rules="none">
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
@@ -721,11 +722,11 @@ allowed (e.g. inside a directive).</p>
 </table>
 </div>
 <div class="section" id="replacement-text">
-<h3><a class="toc-backref" href="#id77">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></h3>
+<h3><a class="toc-backref" href="#id78">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></h3>
 <p>I recommend you try <a class="reference external" href="http://www.python.org/">Python, <em>the</em> best language around</a> <a class="footnote-reference" href="#id25" id="id28">[5]</a>.</p>
 </div>
 <div class="section" id="compound-paragraph">
-<h3><a class="toc-backref" href="#id78">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></h3>
+<h3><a class="toc-backref" href="#id79">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></h3>
 <div class="some-class compound">
 <p class="compound-first">Compound 1, paragraph 1.</p>
 <p class="compound-middle">Compound 1, paragraph 2.</p>
@@ -793,7 +794,7 @@ paragraph.</td>
 </div>
 </div>
 <div class="section" id="parsed-literal-blocks">
-<h3><a class="toc-backref" href="#id79">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></h3>
+<h3><a class="toc-backref" href="#id80">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></h3>
 <pre class="literal-block">
 This is a parsed literal block.
     This line is indented.  The next line is blank.
@@ -1003,9 +1004,44 @@ crunchy, now would it?</td>
 </li>
 </ul>
 </div>
+<div class="section" id="svg-images">
+<h2><a class="toc-backref" href="#id71">2.24&nbsp;&nbsp;&nbsp;SVG Images</a></h2>
+<p>Scalable vector graphics (SVG) images are not supported by all backends.
+Rendering depends partially on the backend, especially if the size is
+not explicitely given.</p>
+<p>Whether an SVG image is scaled or clipped/padded cannot be set in the
+containing HTML. It depends on the viewport declaration inside its
+root &lt;svg&gt; element.</p>
+<object align="left" alt="../../../docs/user/rst/images/biohazard-scaling.svg" class="align-left" data="../../../docs/user/rst/images/biohazard-scaling.svg" style="height: 1em;" type="image/svg+xml">
+../../../docs/user/rst/images/biohazard-scaling.svg</object>
+<p>A scaling image 1 em high, left aligned.</p>
+<a class="reference internal image-reference" href="#directives"><object align="right" alt="../../../docs/user/rst/images/biohazard-scaling.svg" class="align-right" data="../../../docs/user/rst/images/biohazard-scaling.svg" style="width: 5mm;" type="image/svg+xml">../../../docs/user/rst/images/biohazard-scaling.svg</object></a>
+<p>A scaling image 5 mm wide, right aligned, with hyperlink reference:</p>
+<object align="left" alt="../../../docs/user/rst/images/title-scaling.svg" class="align-left" data="../../../docs/user/rst/images/title-scaling.svg" style="width: 50%;" type="image/svg+xml">
+../../../docs/user/rst/images/title-scaling.svg</object>
+<p>A scaling image occupying 50% of the line width (scales with the
+browser window):</p>
+<object align="left" alt="../../../docs/user/rst/images/title-scaling.svg" class="align-left" data="../../../docs/user/rst/images/title-scaling.svg" style="width: 50%; height: 15px;" type="image/svg+xml">
+../../../docs/user/rst/images/title-scaling.svg</object>
+<p>A scaling image occupying 50% of the line width and 15 pixel high
+(this SVG image keeps the aspect ratio):</p>
+<p>An inline image <object alt="inline-svg" data="../../../docs/user/rst/images/biohazard-scaling.svg" style="height: 0.8em;" type="image/svg+xml">inline-svg</object> scaled to match the text size.</p>
+<object align="left" alt="../../../docs/user/rst/images/biohazard.svg" class="align-left" data="../../../docs/user/rst/images/biohazard.svg" style="width: 4cm; height: 2em;" type="image/svg+xml">
+../../../docs/user/rst/images/biohazard.svg</object>
+<p>A fixed-size image in a  4 cm x 2 em box.</p>
+<object align="left" alt="../../../docs/user/rst/images/title.svg" class="align-left" data="../../../docs/user/rst/images/title.svg" style="width: 50%; height: 15px;" type="image/svg+xml">
+../../../docs/user/rst/images/title.svg</object>
+<p>A fixed-size image in a box 50% the line width and 15 pixle high.</p>
+<p>SVG image in a figure:</p>
+<div class="figure">
+<object alt="reStructuredText, the markup syntax" data="../../../docs/user/rst/images/title.svg" style="width: 290px; height: 28px;" type="image/svg+xml">
+reStructuredText, the markup syntax</object>
+<p class="caption">This is the caption.</p>
+</div>
+</div>
 </div>
 <div class="section" id="error-handling">
-<h1><a class="toc-backref" href="#id71">3&nbsp;&nbsp;&nbsp;Error Handling</a></h1>
+<h1><a class="toc-backref" href="#id72">3&nbsp;&nbsp;&nbsp;Error Handling</a></h1>
 <p>Any errors caught during processing will generate system messages.</p>
 <p>There should be five messages in the following, auto-generated
 section, &quot;Docutils System Messages&quot;:</p>
@@ -1016,17 +1052,17 @@ section, &quot;Docutils System Messages&quot;:</p>
 <div class="system-message" id="id23">
 <p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/data/standard.txt</tt>, line 104); <em><a href="#id24">backlink</a></em></p>
 Undefined substitution referenced: &quot;problematic&quot;.</div>
-<div class="system-message" id="id80">
-<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/standalone_rst_html4css1.txt</tt>, line 363); <em><a href="#id81">backlink</a></em></p>
+<div class="system-message" id="id81">
+<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/standalone_rst_html4css1.txt</tt>, line 363); <em><a href="#id82">backlink</a></em></p>
 Unknown target name: &quot;5&quot;.</div>
-<div class="system-message" id="id82">
-<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/data/standard.txt</tt>, line 372); <em><a href="#id83">backlink</a></em></p>
+<div class="system-message" id="id83">
+<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/data/standard.txt</tt>, line 372); <em><a href="#id84">backlink</a></em></p>
 Unknown target name: &quot;nonexistent&quot;.</div>
-<div class="system-message" id="id84">
-<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/data/standard.txt</tt>, line 399); <em><a href="#id85">backlink</a></em></p>
+<div class="system-message" id="id85">
+<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/data/standard.txt</tt>, line 399); <em><a href="#id86">backlink</a></em></p>
 Unknown target name: &quot;hyperlink reference without a target&quot;.</div>
-<div class="system-message" id="id86">
-<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/data/standard.txt</tt>, line 412); <em><a href="#id87">backlink</a></em></p>
+<div class="system-message" id="id87">
+<p class="system-message-title">System Message: ERROR/3 (<tt class="docutils">functional/input/data/standard.txt</tt>, line 412); <em><a href="#id88">backlink</a></em></p>
 Duplicate target name, cannot be used as a unique reference: &quot;duplicate target names&quot;.</div>
 </div>
 </div>
